[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Choosing.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Typing.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TickingClock.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Result.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Title.tscn" type="PackedScene" id=6]
[ext_resource path="res://ressources/main_title_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://ressources/text_font.tres" type="DynamicFont" id=8]

[sub_resource type="Animation" id=2]
resource_name = "Score Added"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("UI/ScoreAdded:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.207843, 0.32549, 0.666667, 1 ), Color( 0.207843, 0.32549, 0.666667, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("UI/ScoreAdded")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "Update Score"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.207843, 0.32549, 0.666667, 1 ), Color( 0.231373, 0.231373, 0.231373, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Scenes" type="Node" parent="."]

[node name="Result" parent="Scenes" instance=ExtResource( 5 )]
visible = false

[node name="Typing" parent="Scenes" instance=ExtResource( 3 )]
visible = false

[node name="Choosing" parent="Scenes" instance=ExtResource( 2 )]

[node name="Title" parent="Scenes" instance=ExtResource( 6 )]
visible = false

[node name="UI" type="Node" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="UI"]
visible = false
color = Color( 0.27451, 0.27451, 0.27451, 1 )

[node name="TickingClock" parent="UI" instance=ExtResource( 4 )]
margin_left = 239.0
margin_top = 794.0
margin_right = 239.0
margin_bottom = 794.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( -679, -703 )

[node name="ScoreAdded" type="Label" parent="UI"]
margin_left = 102.0
margin_top = 15.0
margin_right = 142.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.207843, 0.32549, 0.666667, 0.1 )
custom_fonts/font = ExtResource( 8 )
text = "toto"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/ScoreAdded"]
root_node = NodePath("../../..")
"anims/Score Added" = SubResource( 2 )

[node name="ScoreTally" type="Label" parent="UI"]
margin_left = 34.0
margin_top = 285.0
margin_right = 274.0
margin_bottom = 429.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.218431, 0.283137, 0.470784, 1 )
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/ScoreTally"]
"anims/Update Score" = SubResource( 1 )

[connection signal="next_stage" from="Scenes/Result" to="." method="_on_Result_next_stage"]
[connection signal="image_selected" from="Scenes/Choosing" to="." method="_on_Choosing_image_selected"]
[connection signal="game_start" from="Scenes/Title" to="." method="_on_Title_game_start"]
[connection signal="clock_stop" from="UI/TickingClock" to="." method="_on_TickingClock_clock_stop"]
